# drf-ecommerce

./: .gitignore  README.md  commands.md  pyproject.toml  schema.yml
config/: settings.py
config/settings/: base.py
core/: urls.py
core/product/: serializers.py  views.py
core/product/migrations/: 0001_initial.py  0002_alter_category_name.py  0003_alter_brand_name.py
core/settings/: base.py
core/tests/: factories.py
