[tool.poetry]
name = "django-ecommerce"
version = "0.1.0"
description = ""
authors = ["carvalhocaio <caiocarvalho.py@gmail.com>"]
readme = "README.md"
packages = [{include = "django_ecommerce"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"
pytest = "^7.3.1"
pytest-django = "^4.5.2"
flake8 = "^6.0.0"
django-mptt = "^0.14.0"
drf-spectacular = "^0.26.2"
coverage = "^7.2.5"
pytest-cov = "^4.0.0"
pytest-factoryboy = "^2.5.1"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
